# lpe-monopixel-firmware

./: CMakeLists.txt  README.md
conf/: FreeRTOSConfig.h  lwipopts.h
src/: http.c  http.h  main.c
